add layout of about's  blocks

--- a/index.html
+++ b/index.html
@@ -254,20 +254,29 @@
                                     <div class="about__block-inner flex-row">
                                         <div class="about__block-col flex-col">
                                             <div class="about__block flex-col">
-                                                <p>
-                                                    лучшие цены в Беларуси
+                                                <p class="block-first">
+                                                    лучшие цены
+                                                </p>
+                                                <p class="block-first">
+                                                    в Беларуси
                                                 </p>
                                             </div>
-                                            <div class="about__block flex-col">
-                                                <p>
-                                                    любая продукция под заказ в кратчайшие сроки
+                                            <div class="about__block">
+                                                <p class="flex-second">
+                                                    любая продукция под заказ
+                                                </p>
+                                                <p class="flex-second">
+                                                    в кратчайшие сроки
                                                 </p>
                                             </div>
                                         </div>
                                         <div class="about__block-col flex-col">
                                             <div class="about__block flex-col">
-                                                <p>
-                                                    официальная гарантия на продукцию
+                                                <p class="block-first">
+                                                    официальная гарантия
+                                                </p>
+                                                <p class="block-first">
+                                                    на продукцию
                                                 </p>
                                             </div>
                                             <button class="about__btn popup__open">
@@ -635,8 +644,7 @@
     <!-- popup -->
 
     <!-- внимание - в API карты - временный ключ! -->
-    <script
-        src="https://api-maps.yandex.ru/2.1?apikey=3e503b03-a02c-492f-a2de-bfd7c7b55ab1&lang=ru_RU"
+    <script src="https://api-maps.yandex.ru/2.1?apikey=3e503b03-a02c-492f-a2de-bfd7c7b55ab1&lang=ru_RU"
         type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
