fix validation errors in html

--- a/index.html
+++ b/index.html
@@ -468,25 +468,25 @@
                         <form class="feedback-form">
                             <div class="input-container input-container_sm">
                                 <label class="input-name">Имя</label>
-                                <input type="text" class="input-field" id="name" name="name" placeholder="Алексей">
+                                <input type="text" class="input-field" name="name" placeholder="Алексей">
                             </div>
                             <div class="input-container input-container_sm">
                                 <label class="input-name">Мобильный телефон</label>
-                                <input type="phone" class="input-field" id="phone" name="phone_number"
+                                <input type="tel" class="input-field"  name="phone_number"
                                     placeholder="+375">
                             </div>
                             <div class="input-container input-container_sm">
                                 <label class="input-name">Электронная почта</label>
-                                <input type="mail" class="input-field" id="email" name="email"
+                                <input type="email" class="input-field"  name="email"
                                     placeholder="name@mail.by">
                             </div>
                             <div class="input-container input-container_sm">
                                 <label class="input-name">Город</label>
-                                <input type="text" class="input-field" id="city" name="city" placeholder="Минск">
+                                <input type="text" class="input-field" name="city" placeholder="Минск">
                             </div>
                             <div class="input-container input-container_lg">
                                 <label class="input-name">Сообщение</label>
-                                <textarea id="message" cols="30" rows="10" class="input-field" name="message"
+                                <textarea cols="30" rows="10" class="input-field" name="message"
                                     placeholder="Интересует покупка средства Cleanol «Optimal», 5 кг"></textarea>
                             </div>
                             <button class="block-btn block-btn_white" type="submit" onclick="">Позвонить</button>
@@ -651,7 +651,7 @@
     <script src="js/main.js"></script>
     <script src="js/popup.js"></script>
     <script src="js/sendForm.js"></script>
-    <script src="js/map.js" type="text/javascript"></script>
+    <script src="js/map.js"></script>
 </body>
 
 </html>
