--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                     </h6>
                                     <div class="about__block-inner flex-row">
                                         <div class="about__block-col flex-col">
-                                            <div class="about__block flex-col">
+                                            <div class="about__block flex-row icon__1">
                                                 <p class="block-first">
                                                     лучшие цены
                                                 </p>
@@ -261,17 +261,17 @@
                                                     в Беларуси
                                                 </p>
                                             </div>
-                                            <div class="about__block">
-                                                <p class="flex-second">
+                                            <div class="about__block flex-col icon__2">
+                                                <p class="block-second">
                                                     любая продукция под заказ
                                                 </p>
-                                                <p class="flex-second">
+                                                <p class="block-second">
                                                     в кратчайшие сроки
                                                 </p>
                                             </div>
                                         </div>
                                         <div class="about__block-col flex-col">
-                                            <div class="about__block flex-col">
+                                            <div class="about__block flex-col icon__3">
                                                 <p class="block-first">
                                                     официальная гарантия
                                                 </p>
@@ -472,13 +472,11 @@
                             </div>
                             <div class="input-container input-container_sm">
                                 <label class="input-name">Мобильный телефон</label>
-                                <input type="tel" class="input-field"  name="phone_number"
-                                    placeholder="+375">
+                                <input type="tel" class="input-field" name="phone_number" placeholder="+375">
                             </div>
                             <div class="input-container input-container_sm">
                                 <label class="input-name">Электронная почта</label>
-                                <input type="email" class="input-field"  name="email"
-                                    placeholder="name@mail.by">
+                                <input type="email" class="input-field" name="email" placeholder="name@mail.by">
                             </div>
                             <div class="input-container input-container_sm">
                                 <label class="input-name">Город</label>
