small fix big screen products

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <!-- ВОСКИ -->
                 <div class="products__wax" id="wax">
                     <h3 class="products__subtitle">Воски</h3>
-                    <div class="products__visible-wrapper" id="wax-wrapper-visible"></div>
+                    <div class="products__visible-wrapper products__visible-wrapper_wax" id="wax-wrapper-visible"></div>
                 </div>
 
                 <!-- СПЕЦИАЛЬНЫЕ СРЕДСТВА -->
