add adaptive of header

--- a/index.html
+++ b/index.html
@@ -26,18 +26,21 @@
                                     365-80-70
                                 </a>
                             </p>
-                            <p class="header__desc">
-                                мтс<span>|</span>
-                            </p>
-                            <p class="header__desc">
-                                А1
-                            </p>
+                            <div class="header__desc-inner">
+                                <p class="header__desc">
+                                    мтс<span>|</span>
+                                </p>
+                                <p class="header__desc">
+                                    А1
+                                </p>
+                            </div>
                         </div>
                         <p class="header__email">
                             <a href="mailto:info@cleanol.by">
                                 info@cleanol.by
                             </a>
                         </p>
+                        <img src="images/burger-menu.svg" alt="burger menu">
                     </div>
                     <div class="header__low flex-row">
                         <a href="#" class="header__logo">
