--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 info@cleanol.by
                             </a>
                         </p>
-                        <img src="images/burger-menu.svg" alt="burger menu">
+                        <img class="icon-menu" src="images/burger-menu.svg" alt="burger menu">
                     </div>
                     <div class="header__low flex-row">
                         <a href="#" class="header__logo">
