fix bugs of adaptive-menu

--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
                             пн-пт с 9:00 до 18:00
                         </p>
                         <div class="header__phone-row flex-row">
-                            <p class=" header__phone">
-                                <a href="#tel:+375293658070">
-                                    365-80-70
-                                </a>
-                            </p>
+                            <a class=" header__phone" href="#tel:+375293658070">
+                                365-80-70
+                            </a>
                             <div class="header__desc-inner">
                                 <p class="header__desc">
                                     мтс<span>|</span>
@@ -88,6 +86,94 @@
                                 </li>
                             </ul>
                         </nav>
+                    </div>
+                </div>
+                <div class="adaptive-menu">
+                    <div class="container-adaptive">
+                        <div class="adaptive__high">
+                            <img class="apaptive-logo" src="./images/logo-adaptive.png" alt="logo mobile">
+                            <div class="adaptive-menu__phone">
+                                <a href="#tel:+375293658070">
+                                    365-80-70
+                                </a>
+                                <div class="adaptive-menu__desc">
+                                    <p>
+                                        мтс
+                                    </p>
+                                    <span>|</span>
+                                    <p>
+                                        А1
+                                    </p>
+                                </div>
+                            </div>
+                            <a class="adaptive-menu__email" href="#">
+                                info@cleanol.by
+                            </a>
+                            <img class="adaptive-menu__close" src="./images/menu-close.svg" alt="close">
+                        </div>
+                        <div class="adaptive__low">
+                            <nav class="adaptive-menu__nav">
+                                <ul class="adaptive-menu__list">
+                                    <li class="adaptive-menu__item">
+                                        <a class="adaptive-menu__link" href="#">
+                                            О компании Cleanol
+                                        </a>
+                                    </li>
+                                    <li class="adaptive-menu__item">
+                                        <a class="adaptive-menu__link" href="#">
+                                            О нас
+                                        </a>
+                                    </li>
+                                    <li class="adaptive-menu__item">
+                                        <a class="adaptive-menu__link" href="#">
+                                            Автошампуни
+                                        </a>
+                                    </li>
+                                    <li class="adaptive-menu__item">
+                                        <a class="adaptive-menu__link" href="#">
+                                            Воски
+                                        </a>
+                                    </li>
+                                    <li class="adaptive-menu__item">
+                                        <a class="adaptive-menu__link" href="#">
+                                            Специальные средства
+                                        </a>
+                                    </li>
+                                    <li class="adaptive-menu__item">
+                                        <a class="adaptive-menu__link" href="#">
+                                            Сервис
+                                        </a>
+                                    </li>
+                                    <li class="adaptive-menu__item">
+                                        <a class="adaptive-menu__link" href="#">
+                                            Контакты
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                            <div class="adaptive__col">
+                                <div class="adaptive__phone">
+                                    <a href="#tel:+375293658070">
+                                        365-80-70
+                                    </a>
+                                    <div class="adaptive__add">
+                                        <p>
+                                            мтс
+                                        </p>
+                                        <span>|</span>
+                                        <p>
+                                            А1
+                                        </p>
+                                    </div>
+                                </div>
+                                <a class="adaptive__email" href="#">
+                                    info@cleanol.by
+                                </a>
+                                <p class="adaptive__desc">
+                                    Время работы: пн-пт с 9 до 18
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
