add smooth scroll

--- a/index.html
+++ b/index.html
@@ -50,37 +50,37 @@
                         <nav class="header__menu">
                             <ul class="header__menu-list flex-row">
                                 <li class="header__menu-item">
-                                    <a href="#about" class="header__menu-link">
+                                    <a href="#about" class="header__menu-link menu-link">
                                         О компании Cleanol <span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#about" class="header__menu-link">
+                                    <a href="#about" class="header__menu-link menu-link">
                                         О нас <span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#shampoo" class="header__menu-link">
+                                    <a href="#shampoo" class="header__menu-link menu-link">
                                         Автошампуни <span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#wax" class="header__menu-link">
+                                    <a href="#wax" class="header__menu-link menu-link">
                                         Воски <span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#special" class="header__menu-link">
+                                    <a href="#special" class="header__menu-link menu-link">
                                         Специальные средства<span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#service" class="header__menu-link">
+                                    <a href="#service" class="header__menu-link menu-link">
                                         Сервис <span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#contacts" class="header__menu-link">
+                                    <a class="header__menu-link menu-link" href="#contacts">
                                         Контакты
                                     </a>
                                 </li>
@@ -115,37 +115,37 @@
                             <nav class="adaptive-menu__nav">
                                 <ul class="adaptive-menu__list">
                                     <li class="adaptive-menu__item">
-                                        <a class="adaptive-menu__link" href="#">
+                                        <a class="adaptive-menu__link menu-link" href="#about">
                                             О компании Cleanol
                                         </a>
                                     </li>
                                     <li class="adaptive-menu__item">
-                                        <a class="adaptive-menu__link" href="#">
+                                        <a class="adaptive-menu__link menu-link" href="#about">
                                             О нас
                                         </a>
                                     </li>
                                     <li class="adaptive-menu__item">
-                                        <a class="adaptive-menu__link" href="#">
+                                        <a class="adaptive-menu__link menu-link" href="#shampoo">
                                             Автошампуни
                                         </a>
                                     </li>
                                     <li class="adaptive-menu__item">
-                                        <a class="adaptive-menu__link" href="#">
+                                        <a class="adaptive-menu__link menu-link" href="#wax">
                                             Воски
                                         </a>
                                     </li>
                                     <li class="adaptive-menu__item">
-                                        <a class="adaptive-menu__link" href="#">
+                                        <a class="adaptive-menu__link menu-link" href="#special">
                                             Специальные средства
                                         </a>
                                     </li>
                                     <li class="adaptive-menu__item">
-                                        <a class="adaptive-menu__link" href="#">
+                                        <a class="adaptive-menu__link menu-link" href="#service">
                                             Сервис
                                         </a>
                                     </li>
                                     <li class="adaptive-menu__item">
-                                        <a class="adaptive-menu__link" href="#">
+                                        <a class="adaptive-menu__link" href="#contacts">
                                             Контакты
                                         </a>
                                     </li>
@@ -626,13 +626,13 @@
             </div>
 
             <div class="footer-menu">
-                <a class="footer-menu__link" href="#about">О компании Cleanol</a>
-                <a class="footer-menu__link" href="#about">О нас</a>
-                <a class="footer-menu__link" href="#shampoo">Автошампуни</a>
-                <a class="footer-menu__link" href="#wax">Воски</a>
-                <a class="footer-menu__link" href="#special">Специальные средства</a>
-                <a class="footer-menu__link" href="#service">Сервис</a>
-                <a class="footer-menu__link" href="#contacts">Контакты</a>
+                <a class="footer-menu__link menu-link" href="#about">О компании Cleanol</a>
+                <a class="footer-menu__link menu-link" href="#about">О нас</a>
+                <a class="footer-menu__link menu-link" href="#shampoo">Автошампуни</a>
+                <a class="footer-menu__link menu-link" href="#wax">Воски</a>
+                <a class="footer-menu__link menu-link" href="#special">Специальные средства</a>
+                <a class="footer-menu__link menu-link" href="#service">Сервис</a>
+                <a class="footer-menu__link menu-link" href="#contacts">Контакты</a>
             </div>
 
             <div class="footer-contacts">
