fix bugs of adaptive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             пн-пт с 9:00 до 18:00
                         </p>
                         <div class="header__phone-row flex-row">
-                            <a class=" header__phone" href="#tel:+375293658070">
+                            <a class=" header__phone" href="tel:+375293658070">
                                 365-80-70
                             </a>
                             <div class="header__desc-inner">
@@ -93,7 +93,7 @@
                         <div class="adaptive__high">
                             <img class="apaptive-logo" src="./images/logo-adaptive.png" alt="logo mobile">
                             <div class="adaptive-menu__phone">
-                                <a href="#tel:+375293658070">
+                                <a href="tel:+375293658070">
                                     365-80-70
                                 </a>
                                 <div class="adaptive-menu__desc">
@@ -106,7 +106,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <a class="adaptive-menu__email" href="#">
+                            <a class="adaptive-menu__email" href="mailto:info@cleanol.by">
                                 info@cleanol.by
                             </a>
                             <img class="adaptive-menu__close" src="./images/menu-close.svg" alt="close">
@@ -153,7 +153,7 @@
                             </nav>
                             <div class="adaptive__col">
                                 <div class="adaptive__phone">
-                                    <a href="#tel:+375293658070">
+                                    <a href="tel:+375293658070">
                                         365-80-70
                                     </a>
                                     <div class="adaptive__add">
@@ -166,7 +166,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <a class="adaptive__email" href="#">
+                                <a class="adaptive__email" href="mailto:info@cleanol.by">
                                     info@cleanol.by
                                 </a>
                                 <p class="adaptive__desc">
@@ -639,7 +639,7 @@
                 <div class="footer-contacts footer-contacts_top">
                     <p class="content-container__item"><a
                             class="content-container__item_bold content-container__item_red"
-                            href="#tel:+375293658070">365-80-70</a> МТС | А1
+                            href="tel:+375293658070">365-80-70</a> МТС | А1
                     </p>
                     <a class="content-container__item" href="mailto:info@cleanol.by">info@cleanol.by</a>
                 </div>
