--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
                     <div class="content-container content-container_right">
                         <form class="feedback-form">
                             <div class="input-container input-container_sm">
+                                <input type="hidden" name="title" value="block from site">
                                 <label class="input-name">Имя</label>
                                 <input type="text" class="input-field" name="name" placeholder="Алексей">
                             </div>
@@ -678,7 +679,7 @@
                         <fieldset class="content-wrapper">
                             <legend class="input-title">Телефон<span class="input-title input-title_sp">*</span>
                             </legend>
-                            <input type="tel" class="input-field_modal" name="tel" id="phone_number">
+                            <input type="tel" class="input-field_modal" name="phone_number" id="phone_number">
                         </fieldset>
                     </div>
                     <div class="content-row">
