fix bugs of sasfari

--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
                                 </p>
                             </div>
                         </div>
-                        <p class="header__email">
-                            <a href="mailto:info@cleanol.by">
-                                info@cleanol.by
-                            </a>
-                        </p>
+                        <a class="header__email" href="mailto:info@cleanol.by">
+                            info@cleanol.by
+                        </a>
                         <img class="icon-menu" src="images/burger-menu.svg" alt="burger menu">
                     </div>
                     <div class="header__low flex-row">
