--- a/index.html
+++ b/index.html
@@ -671,20 +671,20 @@
                             <legend class="input-title">Имя<span class="input-title input-title_sp">*</span>
                             </legend>
                             <input type="hidden" name="title" value="from modal">
-                            <input type="text" class="input-field_modal" name="name" id="name">
+                            <input type="text" class="input-field_modal" name="name" id="name" required>
                         </fieldset>
 
                         <fieldset class="content-wrapper">
                             <legend class="input-title">Телефон<span class="input-title input-title_sp">*</span>
                             </legend>
-                            <input type="tel" class="input-field_modal" name="phone_number" id="phone_number">
+                            <input type="tel" class="input-field_modal" name="phone_number" id="phone_number" required>
                         </fieldset>
                     </div>
                     <div class="content-row">
                         <fieldset class="content-wrapper">
                             <legend class="input-title">Город<span class="input-title input-title_sp">*</span>
                             </legend>
-                            <input type="text" class="input-field_modal" name="city" id="city">
+                            <input type="text" class="input-field_modal" name="city" id="city" required>
                         </fieldset>
 
                         <fieldset class="content-wrapper">
@@ -701,8 +701,8 @@
                     </div>
                     <div class="error_message"></div>
                     <div class="content-row content-row_personal">
-                        <input type="checkbox" id="personal_data" name="personal_data" required>
-                        <label for="personal_data" class="popup-content__text popup-content__text_sm">Нажимая на
+                        <input type="checkbox" id="personal_data" name="personal_data" class="checkb" required>
+                        <label for="personal_data" class="popup-content__text popup-content__text_sm checkb-lbl">Нажимая на
                             кнопку
                             “Отправить заявку”, вы соглашаетесь на обработку персональных данных</label>
                     </div>
