--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     </div>
                 </div>
             </div>
-            <!-- BLOCK 2 BANNER -->
+            <!-- BLOCK 2 BANNER end-->
 
 
             <section class="about" id="about">
