--- a/index.html
+++ b/index.html
@@ -717,7 +717,8 @@
                     <div class="error_message"></div>
                     <div class="content-row content-row_personal">
                         <input type="checkbox" id="personal_data" name="personal_data" class="checkb" required>
-                        <label for="personal_data" class="popup-content__text popup-content__text_sm checkb-lbl">Нажимая на
+                        <label for="personal_data" class="popup-content__text popup-content__text_sm checkb-lbl">Нажимая
+                            на
                             кнопку
                             “Отправить заявку”, вы соглашаетесь на обработку персональных данных</label>
                     </div>
