--- a/index.html
+++ b/index.html
@@ -659,8 +659,8 @@
 
                 <div class="footer-contacts footer-contacts_bottom">
                     <p class="content-container__item content-container__item_red">220012, Республика Беларусь, г.
-                        Минск,
-                        ул. Толбухина 2а, к. 320</p>
+                        Минск, ул. Толбухина 2а, к. 320
+                    </p>
                     <p class="content-container__item content-container__item_tiny">Время работы: пн-пт с 9 до 18</p>
                 </div>
             </div>
@@ -717,9 +717,7 @@
                     <div class="content-row content-row_personal">
                         <input type="checkbox" id="personal_data" name="personal_data" class="checkb" required>
                         <label for="personal_data" class="popup-content__text popup-content__text_sm checkb-lbl">Нажимая
-                            на
-                            кнопку
-                            “Отправить заявку”, вы соглашаетесь на обработку персональных данных</label>
+                            на кнопку “Отправить заявку”, вы соглашаетесь на обработку персональных данных</label>
                     </div>
 
                     <button class="popup-button popup__open2 confirm" type="submit" id="#popup_2" onclick="">Отправить
