fix bugs of adaptive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" /> -->
     <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="scss/style.css">
-    <title>CLeanol</title>
+    <title>Автохимия для всех моечных комплексов</title>
+    <link rel="shortcut icon" href="/Favicon 3.ico" type="image/x-icon">
 </head>
 
 <body>
