fix bugs of adaptive

--- a/index.html
+++ b/index.html
@@ -600,14 +600,14 @@
 
             <!-- contacts -->
             <div class="contacts" id="contacts">
-                <div class="contacts contacts_left">
+                <div class="contacts_left">
                     <div class="title-container title-container_contacts">
                         <img src="./images/logo_swoosh.svg" alt="" class="title-container__icon">
                         <h2 class="title-container__title">Наши контакты</h2>
                     </div>
 
                     <div class="contacts-inner">
-                        <div class="contacts-inner contacts-inner_left">
+                        <div class="contacts-inner_left">
                             <img src="./images/block-9_icons/icon_map.svg" alt="map icon"
                                 class="content-container__icon">
                             <p class="content-container__item_bold">г. Минск, ул. Толбухина
@@ -617,7 +617,7 @@
                                 20:00</p>
                         </div>
 
-                        <div class="contacts-inner contacts-inner_right">
+                        <div class="contacts-inner_right">
                             <img src="./images/block-9_icons/icon_chat.svg" alt="message icon"
                                 class="content-container__icon">
                             <a class="content-container__item_bold" href="mailto:info@cleanol.by">info@cleanol.by</a>
@@ -626,7 +626,7 @@
                     </div>
                 </div>
 
-                <div class="contacts contacts_right">
+                <div class="contacts_right">
                     <div id="map" class="contacts_right__map"></div>
                 </div>
             </div>
